--- a/src/components/Post.module.css
+++ b/src/components/Post.module.css
@@ -1,1 +1,127 @@
-.post {}
+.post {
+    background: var(--gray-800);
+    border-radius: 8px;
+    padding: 2.5rem;
+}
+
+.post+.post {
+    margin-top: 2rem;
+}
+
+.post header {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.post header time {
+    font-size: 0.875rem;
+    color: var(--gray-400);
+}
+
+.author {
+    display: flex;
+    align-items: center;
+
+    gap: 1rem;
+}
+
+.authorInfo {
+    display: flex;
+    flex-direction: column;
+}
+
+.authorInfo strong {
+    color: var(--gray-100);
+    line-height: 1.6;
+}
+
+.authorInfo span {
+    font-size: 0.875rem;
+    color: var(--gray-400);
+    line-height: 1.6;
+}
+
+.avatar {
+    /* box-sizing: initial; */
+    width: calc(3rem + 12px);
+    height: calc(3rem + 12px);
+    border-radius: 8px;
+    border: 4px solid var(--gray-800);
+    outline: 2px solid var(--green-500);
+}
+
+.content {
+    line-height: 1.6;
+    color: var(--gray-300);
+    margin-top: 1.5rem;
+}
+
+.content p {
+    margin-top: 1rem;
+}
+
+.content a {
+    margin-left: 0.2rem;
+    font-weight: bold;
+    color: var(--green-500);
+}
+
+.content a:hover {
+    color: var(--green-300);
+}
+
+/* Comment form */
+
+.commentForm {
+    width: 100%;
+    margin-top: 1.5rem;
+    padding-top: 1.5rem;
+    border-top: 1px solid var(--gray-600);
+}
+
+.commentForm>strong {
+    line-height: 1.6;
+    color: var(--gray-100);
+}
+
+.commentForm textarea {
+    display: block;
+    width: 100%;
+    background: var(--gray-900);
+    border: 0;
+    resize: none;
+    height: 6rem;
+    padding: 1rem;
+    border-radius: 8px;
+    color: var(--gray-100);
+    line-height: 1.4;
+    margin-top: 1rem;
+}
+
+.commentForm:focus-within button[type=submit] {
+    display: block;
+}
+
+.commentForm button[type=submit] {
+    padding: 1rem 1.25rem;
+    margin-top: 1rem;
+    border: 0;
+    border-radius: 8px;
+    background: var(--green-500);
+    color: var(--white);
+    font-weight: bold;
+    cursor: pointer;
+
+    transition: background 0.1s;
+
+    display: none;
+}
+
+.commentForm button[type=submit]:hover {
+    background: var(--green-300);
+}
+
+.commentList {
+    margin-top: 2rem;
+}
