--- a/src/App.module.css
+++ b/src/App.module.css
@@ -4,7 +4,18 @@
     padding: 0 1rem;
 
     display: grid;
-    grid-template-columns: 256px 1fr;
+    grid-template-columns: 16rem 1fr;
     gap: 2rem;
     align-items: flex-start;
+}
+
+@media (max-width: 786px) {
+    html {
+        font-size: 75%;
+    }
+
+    .wrapper {
+        max-width: 90%;
+        grid-template-columns: 1fr;
+    }
 }
