--- a/src/components/Comment.module.css
+++ b/src/components/Comment.module.css
@@ -4,12 +4,6 @@
     gap: 1rem;
 }
 
-.avatar {
-    width: 3rem;
-    height: 3rem;
-    border-radius: 8px;
-}
-
 .commentBox {
     flex: 1;
 }
@@ -20,32 +14,69 @@
     padding: 1rem;
 }
 
-.commentContent header div {
+.commentContent header {
     display: flex;
-    flex-direction: column;
-
-    gap: 0.25rem;
+    align-items: flex-start;
+    justify-content: space-between;
 }
 
-.commentContent header div strong {
-    font-size: 0.850rem;
-    color: var(--gray-100);
+.authorAndTime strong {
+    display: block;
+    font-size: 0.875rem;
+    line-height: 1.6;
 }
 
-.commentContent header div time {
-    font-size: 0.700rem;
+.authorAndTime time {
+    display: block;
+    font-size: 0.75rem;
+    line-height: 1.6;
     color: var(--gray-400);
 }
 
 .commentContent header button {
-    border: none;
+    background: transparent;
+    border: 0;
     color: var(--gray-400);
-    background: var(--gray-700);
     cursor: pointer;
+
+    line-height: 0;
+}
+
+.commentContent header button:hover {
+    color: var(--red-300);
 }
 
 .commentContent p {
-    font-size: 1rem;
+    margin-top: 1rem;
     color: var(--gray-300);
-    margin: 1rem 0;
+}
+
+.commentBox footer {
+    margin-top: 1rem;
+}
+
+.commentBox footer button {
+    background: transparent;
+    border: 0;
+    border-radius: 2px;
+    color: var(--gray-400);
+    cursor: pointer;
+
+    display: flex;
+    align-items: center;
+
+    line-height: 0;
+}
+
+.commentBox footer button:hover {
+    color: var(--green-300);
+}
+
+.commentBox footer button svg {
+    margin-right: 0.5rem;
+}
+
+.commentBox footer button span::before {
+    content: "\2022";
+    padding: 0 0.25rem;
 }
