--- a/src/components/Post.module.css
+++ b/src/components/Post.module.css
@@ -8,7 +8,7 @@
     margin-top: 2rem;
 }
 
-.post header {
+.post>header {
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -40,15 +40,6 @@
     font-size: 0.875rem;
     color: var(--gray-400);
     line-height: 1.6;
-}
-
-.avatar {
-    /* box-sizing: initial; */
-    width: calc(3rem + 12px);
-    height: calc(3rem + 12px);
-    border-radius: 8px;
-    border: 4px solid var(--gray-800);
-    outline: 2px solid var(--green-500);
 }
 
 .content {
